--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -70,7 +70,7 @@ Title_ActivateUser=Activate User
 Title_PleaseWait=Please Wait
 Title_Error=Error
 Title_Success=Success
-Title_UserEventHistory=User Event History
+Title_UserEventHistory=Password History
 Title_Logout=Logout
 Title_UpdateAttributes=Update Attributes
 Title_PasswordStrength=Password Strength
@@ -78,7 +78,7 @@ Title_Shortcuts=Shortcuts
 Title_PasswordWarning=Password Warning
 Title_Captcha=Verification
 Title_ConfirmResponses=Confirm Password Responses
-Title_UserInformation=User Information
+Title_UserInformation=Account Information
 Title_RandomPasswords=Random Passwords
 Title_PasswordGuide=Password Guide
 Title_ForgottenUsername=Forgotten Username
@@ -91,7 +91,7 @@ Long_Title_SetupResponses=Setup your forgotten password responses. These secret 
 Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
 Long_Title_NewUser=Register a new user account.
 Long_Title_UpdateAttributes=Update your user information.
-Long_Title_UserEventHistory=Password event history.
+Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
 Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UserInformation=Information about your password and password policies.
 Long_Title_Admin=PWM administrative functions
