--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -178,6 +178,14 @@ DESCR_display.showCancelButton=Where appropriate, show a "Cancel" button to user
   the change password screen only if the password is not expired.  The Cancel button will only show up if the browser \
   has javaScript enabled.
 
+LABEL_display.passwordHistory=Show Password History
+DEFLT_display.passwordHistory=true
+DESCR_display.passwordHistory=Show Password History menu on main menu.
+
+LABEL_display.accountInformation=Show User Account Information
+DEFLT_display.accountInformation=true
+DESCR_display.accountInformation=Show User Account Information menu on main menu.
+
 
 #*******************************************************************************************#
 #                                      LDAP                                                 #
@@ -800,13 +808,21 @@ DESCR_events.alert.dailySummary.enable=If true, send an email once a day (at 0:0
 #                                  Challenge Policy                                         #
 #*******************************************************************************************#
 CATEGORY_LABEL_CHALLENGE=Challenge Policy
-CATEGORY_DESCR_CHALLENGE=Challenge Policy.
+CATEGORY_DESCR_CHALLENGE=Challenge Policy.  If a \
+  challenge policy is read from the directory, that policy will override the settings \
+  listed here.
 
-LABEL_challenge.allowSetup.queryMatch=Password Recovery Query String
-DEFLT_challenge.allowSetup.queryMatch=(objectClass=*)
-DESCR_challenge.allowSetup.queryMatch=Query string used to detect if a user is a permitted to configure challenges.  The user \
- must be returned during this ldap query or else the user will not be permitted to \
- configure challenges.\
+
+LABEL_challenge.enable=Enable Setup Responses
+DEFLT_challenge.enable=true
+DESCR_challenge.enable=If enabled, save responses page will be available to users.
+
+LABEL_challenge.forceSetup=Force Response Setup
+DEFLT_challenge.forceSetup=true
+DESCR_challenge.forceSetup=If true, the user will be directed to configure challenge/response before logging out of PWM. \
+ This accounts for new user creation and activation, and other scenarios.  The user is \
+ forced check to see if eligible for allowSetup, and also if they do not have valid \
+ responses already configured.\
 
 LABEL_challenge.minRandomRequired=Minimum Random Required
 DEFLT_challenge.minRandomRequired=2
@@ -885,23 +901,22 @@ DESCR_challenge.randomChallenges=Random Questions for Challenge/Response.   Some
  <ul><li>%user%::5::200</li><li>What is your maiden name?::5::200</li><li>What is your fathers middle name?::5::200</li></ul>
 REGEX_challenge.randomChallenges=^.+::[0-9]+::[0-9]+$
 
+LABEL_challenge.allowSetup.queryMatch=Save Challenge Query String
+DEFLT_challenge.allowSetup.queryMatch=(objectClass=*)
+DESCR_challenge.allowSetup.queryMatch=Query string used to detect if a user is a permitted to configure challenges.  The user \
+ must be returned during this ldap query or else the user will not be permitted to \
+ configure challenges.\
 
 
 #*******************************************************************************************#
 #                                  Password Recovery                                        #
 #*******************************************************************************************#
 CATEGORY_LABEL_RECOVERY=Forgotten Password
-CATEGORY_DESCR_RECOVERY=Policies for user's forgotten password configuration.  If a \
-  configuration policy is read from the directory, that policy will override the settings \
-  listed here.
+CATEGORY_DESCR_RECOVERY=Policies for user's forgotten password configuration.
 
-
-LABEL_challenge.forceSetup=Force Response Setup
-DEFLT_challenge.forceSetup=true
-DESCR_challenge.forceSetup=If true, the user will be directed to configure challenge/response before logging out of PWM. \
- This accounts for new user creation and activation, and other scenarios.  The user is \
- forced check to see if eligible for allowSetup, and also if they do not have valid \
- responses already configured.\
+LABEL_recovery.enable=Enable Forgotten Password
+DEFLT_recovery.enable=true
+DESCR_recovery.enable=If enabled, forgotten password recovery will be available to users.
 
 LABEL_challenge.userAttribute=Response Storage Attribute
 DEFLT_challenge.userAttribute=pwmResponseSet
@@ -1121,7 +1136,7 @@ CATEGORY_DESCR_UPDATE=The update user attributes module will force the user to u
  piece of information while they are using PWM.\
 
 LABEL_updateAttributes.enable=Enable Update Attributes
-DEFLT_updateAttributes.enable=true
+DEFLT_updateAttributes.enable=false
 DESCR_updateAttributes.enable=Enable Update Attributes.  If true, the Update Attributes module will be enabled.
 
 LABEL_updateAttributes.queryMatch=Update Query Match
