--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -86,7 +86,7 @@ Title_Admin=Admin
 
 Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
 Long_Title_ChangePassword=Change you current password.
-Long_Title_ForgottenPassword=Recover your forgotten password. If you have previously configured your forgotten password responses you will be able to recover a forgotten password.
+Long_Title_ForgottenPassword=Recover your forgotten password.
 Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
 Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
 Long_Title_NewUser=Register a new user account.
@@ -109,6 +109,7 @@ Display_ConfirmResponses=Be sure your answers and questions are correct.  Check 
 Display_SetupRequiredResponses=Your administrator requires that you supply responses to these questions.  If you should forget your password, you will need to supply answers to all of these questions to reset your password.
 Display_SetupRandomResponses=Your administrator requires that you supply responses to these questions.  If you should forget your password, you will need to supply answers to at least %1% of these questions to reset your password.
 Display_ForgottenPassword=If you have forgotten your password, follow the prompts to reset your password. If you have not setup your password responses previously, you will not be able to complete this process.<p/>To start, please enter your username.
+Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
 Display_RecoverPassword=Please answer the following questions. If you answer these questions correctly, you will then be able to reset your password.
 Display_RecoverRequiredResponses=These questions are required by your administrator.
 Display_RecoverRandomResponses=You must answer the following questions to continue.
