--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -1005,15 +1005,41 @@ DESCR_challenge.token.length=Length of the email token
 #*******************************************************************************************#
 
 CATEGORY_LABEL_FORGOTTEN_USERNAME=Forgotten Username
-CATEGORY_DESCR_FORGOTTEN_USERNAME=Not yet implemented
+CATEGORY_DESCR_FORGOTTEN_USERNAME=Allow a user to search for a forgotten username using a configurable search filter and attributes.
 
 LABEL_forgottenUsername.enable=Enable Forgotten Username
 DEFLT_forgottenUsername.enable=false
 DESCR_forgottenUsername.enable=Enable forgotten username registration
 
+LABEL_forgottenUsername.form=Forgotten Username Form
+DEFLT_forgottenUsername.form={"":["mail:Email Address:email:3:50:true:false","surname:Last Name:text:2:50:true:false"]}
+DESCR_forgottenUsername.form=Field(s) to be used for search for the username.\
+  <br/><br/>\
+ Format: <b>attributeName:label:type:minimumLength:maximumLength:required:confirm</b>\
+ <table style="width: 400px">\
+ <tr><td>attributeName</td><td>Name of ldap attribute</td></tr>\
+ <tr><td>label</td><td>Label to show to user</td></tr>\
+ <tr><td>type</td><td>One of the following: <br/>text - text value<br/>number - numeric value<br/>email - regular string with email format validation<br/>password - password or senative value</td></tr>\
+ <tr><td>minimumLength</td><td>Minimum Field Length</td></tr>\
+ <tr><td>maximumLength</td><td>Maximum Field Length</td></tr>\
+ <tr><td>required</td><td>Field is required</td></tr>\
+ <tr><td>confirm</td><td>Field must be confirmed (with a duplicate field)</td></tr>\
+ </table>
+
 LABEL_forgottenUsername.searchFilter=Forgotten Username Search Filter
-DEFLT_forgottenUsername.searchFilter=
-DESCR_forgottenUsername.searchFilter=Enable forgotten username registration
+DEFLT_forgottenUsername.searchFilter=(&(objectClass=person)(mail=%mail%)(surname=%surname%))
+DESCR_forgottenUsername.searchFilter=Search filter used to find username.  Each attribute \
+  configured in the Forgotton Username Form should be included in the search filter.  \
+  Strings encoded with a percent sign (%) will be replaced with values supplied by \
+  the user.\
+  <br/><br/>\
+  For example, if the Forgotton Username Form included the attributes "mail" and "surname", then the \
+  filter <b>(&(objectClass=person)(cn=%mail%)(surname=%surname%))</b> may be appropriate.\
+
+LABEL_forgottenUsername.usernameAttribute=Username LDAP Attribute
+DEFLT_forgottenUsername.usernameAttribute=cn
+DESCR_forgottenUsername.usernameAttribute=LDAP Attribute to read as the username of the user.
+REGEX_forgottenUsername.usernameAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
 
 #*******************************************************************************************#
