--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -74,7 +74,7 @@ Error_MissingParameter=A required parameter is missing
 Error_DirectoryUnavailable=Directory unavailable.  If this error occurs repeatedly please contact your helpdesk.
 Error_Unknown=Unknown error.  If this error occurs repeatedly please contact your helpdesk.
 Error_NewUserValidationFailed=One or more values are not correct
-Error_CantMatchUser=Username not found
+Error_CantMatchUser=Unable to find username.  Please try again.
 Error_ServiceNotAvailable=Service is not enabled
 Error_UserMisMatch=Authentication error, please close your browser
 Error_ActivateUserNoQueryMatch=Your user account is not eligible for activation
