--- a/pwm/servlet/src/password/pwm/util/stats/Statistic.properties
+++ b/pwm/servlet/src/password/pwm/util/stats/Statistic.properties
@@ -30,6 +30,8 @@ PWM_UnknownErrors=PWM Unknown/Unhandled Errors
 PasswordChanges=Password Changes
 RecoverySuccesses=Forgotten Password Successes
 RecoveryFailures=Forgotten Password Failures
+ForgottenUsernameFailures=Forgotten Username Failures
+ForgottenUsernameSuccesses=Forgotten Username Successes
 EmailSendSuccesses=Email Send Successes
 EmailSendFailures=Email Send Failures
 PasswordRuleChecks=Password Rule Checks
