--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,9 @@
 #Build Number for ANT. Do not edit!
-#Sat Mar 05 12:22:51 EST 2011
-build.time=2011.03.05 12\:22\:51 EST
-build.number=1019
-build.user=J
+#Wed Mar 16 13:21:51 EDT 2011
+build.time=2011.03.16 13\:21\:50 EDT
+build.number=1022
 pwm.version=1.5.3 devbuild
+build.user=J
 build.java.vendor=Sun Microsystems Inc.
+pwm.website=http\://code.google.com/p/pwm
 build.java.version=1.6.0_24
