--- a/pwm/servlet/src/password/pwm/config/Message.properties
+++ b/pwm/servlet/src/password/pwm/config/Message.properties
@@ -76,6 +76,7 @@ Success_ActivateUser=Your user account has been successfully activated.  Be sure
 Success_UpdateAttributes=Your user information has been successfully updated.
 Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
 Success_UnlockAccount=Your account has been unlocked.
+Success_ForgottenUsername=Your username is %field%.  Please record your username for future use.
 
 EventLog_ChangePassword=Change Password
 EventLog_RecoverPassword=Recover Forgotten Password
