--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -410,7 +410,7 @@ DEFLT_email.challenge.token.plainBody={"":"Your activation token is %TOKEN%."}
 DESCR_email.challenge.token.plainBody=Body of email sent during forgotten password token process.
 
 LABEL_email.challenge.token.htmlBody=Challenge Token HTML Email Body
-DEFLT_email.challenge.token.htmlBody={"":"Your activation token is <b>%TOKEN%<\/b>."}
+DEFLT_email.challenge.token.htmlBody={"":"You, or someone acting as you has requested a password reset.<br/><br/>To continue with your password reset, please <a href=\\"http://www.example.com/pwm/public/ForgottenPassword/%TOKEN%\\">click here</a> to continue.<br/><br/>Alternatively, you can enter the code <b>%TOKEN%</b> to continue.<br/><br/>If you do not wish to change your password at this time, you do not need to take any action."}
 DESCR_email.challenge.token.htmlBody=Body of email sent during forgotten password token process.
 
 #*******************************************************************************************#
@@ -996,7 +996,7 @@ DEFLT_challenge.token.characters=ABCDEFGHJKLMNPQRSTUVWXY3456789
 DESCR_challenge.token.characters=Available characters for the email token.
 
 LABEL_challenge.token.length=Token Length
-DEFLT_challenge.token.length=6
+DEFLT_challenge.token.length=16
 DESCR_challenge.token.length=Length of the email token
 
 
