--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -98,6 +98,7 @@ Error_TokenIncorrect=Incorrect code, please try again.
 Error_BadCurrentPassword=Current password is incorrect, please try again.
 Error_Closing=The operation can not complete because PWM is shutting down.
 Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
+Error_TokenExpired=The token you have entered is expired and is no longer valid.  Please try again.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
@@ -113,3 +114,5 @@ Error_ConfigSaveSuccess=Configuration saved successfully.  PWM restart has been 
 Error_ConfigFormatError=Configuration format error: %field%
 Error_ConfigLdapFailure=Unable to connect to LDAP directory server: %field%
 Error_ConfigLdapSuccess=Successfully connected to LDAP directory server
+
+Error_HTTP_404=The page you requested could not be found.
