--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -72,7 +72,7 @@ Title_Error=Error
 Title_Success=Success
 Title_UserEventHistory=Password History
 Title_Logout=Logout
-Title_UpdateAttributes=Update Attributes
+Title_UpdateAttributes=Update Profile
 Title_PasswordStrength=Password Strength
 Title_Shortcuts=Shortcuts
 Title_PasswordWarning=Password Warning
@@ -90,7 +90,7 @@ Long_Title_ForgottenPassword=Recover your forgotten password.
 Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
 Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
 Long_Title_NewUser=Register a new user account.
-Long_Title_UpdateAttributes=Update your user information.
+Long_Title_UpdateAttributes=Update your user profile data.
 Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
 Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UserInformation=Information about your password and password policies.
@@ -116,7 +116,7 @@ Display_RecoverRandomResponses=You must answer the following questions to contin
 Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
 Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password, you can unlock your account by selecting this option.  Your password will not be changed.
 Display_RecoverChoiceReset=Set a new password.  If you have forgotten your password and would like to set a new one, click here.  Your account will also be unlocked when you set a new password.
-Display_RecoverEnterCode=To verify your identity, a security code has been sent to you.  Please enter the security code here.
+Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please enter the security code here.
 Display_NewUser=To register a new account, please enter the following information.
 Display_ActivateUser=To confirm your identity, please enter the following information. Your information will be used to locate and activate your user account.<p/>Be sure to complete the process, or your account will not be activated properly.
 Display_PleaseWaitBody=Your password is being changed. This process may take several minutes, please be patient.
