--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -230,7 +230,7 @@ LABEL_ldap.testuser.username=LDAP Test User
 DEFLT_ldap.testuser.username=
 DESCR_ldap.testuser.username=LDAP Test User used by PWM to test access to the ldap directory. \
  This user should be configured similar to a normal user account with normal access privileges. \
- PWM will periodically use this account to perform a health check, including changing the accounts password.\
+ PWM will periodically use this account to perform a health check, including changing the password of the account.\
 
 LABEL_ldap.proxy.idleTimeout=LDAP Proxy Idle Timeout
 DEFLT_ldap.proxy.idleTimeout=0
@@ -275,6 +275,13 @@ DEFLT_ldap.usernameSearchFilter=(&(objectClass=person)(cn=%USERNAME%))
 DESCR_ldap.usernameSearchFilter=Used to for contextless login and other functions to find \
  users in ldap using usernames.  The value <i>%USERNAME%</i> is replaced with the \
  actual username value.
+
+LABEL_ldap.readPasswordPolicies=Read Password Policies
+DEFLT_ldap.readPasswordPolicies=true
+DESCR_ldap.readPasswordPolicies=If this setting is true, PWM will attempt to read the password policy \
+ for the user from the ldap directory.  Support for this functionality varies based on directory vendor and directory configuration settings. \
+  <br/><br/>After successfully reading a user password policy, PWM will merge the PWM configured policy and the user policy and apply the most \
+  restrictive value for each setting.\
 
 LABEL_ldap.addObjectClasses=Auto Add Object Classes
 DEFLT_ldap.addObjectClasses=["pwmUser"]
@@ -625,13 +632,6 @@ DESCR_ldap.edirectory.ws.pwdMgtURL=If supplied, this setting will change the beh
   <br/><br/>\
   <b>Note:</b> A secure (https) URL should be used for security reasons.  You may need to import the HTTPS's certificate into \
   the java keystore.    
-
-LABEL_ldap.edirectory.readPasswordPolicies=Read Password Policies
-DEFLT_ldap.edirectory.readPasswordPolicies=true
-DESCR_ldap.edirectory.readPasswordPolicies=If this setting is true, PWM will attempt to read the eDirectory password policy settings \
- for the user.  If a universal password policy is configured and enabled, that policy will \
- be read.  In cases where there is a conflict between the PWM configuration and eDirectory,  \
- the most restrictive policy will be used.\
 
 LABEL_ldap.edirectory.readChallengeSets=Read Challenge Sets
 DEFLT_ldap.edirectory.readChallengeSets=true
