--- a/pwm/servlet/web/WEB-INF/web.xml
+++ b/pwm/servlet/web/WEB-INF/web.xml
@@ -273,11 +273,11 @@
     </servlet-mapping>
     <error-page>
         <error-code>404</error-code>
-        <location>/WEB-INF/jsp/errorHttp.jsp</location>
+        <location>/WEB-INF/jsp/error-http.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/WEB-INF/jsp/errorHttp.jsp</location>
+        <location>/WEB-INF/jsp/error-http.jsp</location>
     </error-page>
     <session-config>
         <session-timeout>5</session-timeout>
