--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,9 +1,9 @@
 #Build Number for ANT. Do not edit!
-#Sun Mar 20 03:29:48 EDT 2011
-build.time=2011.03.20 03\:29\:48 EDT
-build.number=1023
+#Wed Mar 23 12:48:06 EDT 2011
+build.time=2011.03.23 12\:48\:06 EDT
+build.number=1024
+pwm.version=1.5.3 RC1
 build.user=J
-pwm.version=1.5.3 devbuild
 build.java.vendor=Sun Microsystems Inc.
 pwm.website=http\://code.google.com/p/pwm
-build.java.version=1.6.0_24
+build.java.version=1.5.0_21
