--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -308,13 +308,16 @@ DESCR_passwordLastUpdateAttribute=This attribute is used to mark when the passwo
  replication checks, and other processes.
 REGEX_passwordLastUpdateAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
-LABEL_ldap.guidAttribute=Password Update Attribute
-DEFLT_ldap.guidAttribute=pwmGUID
-DESCR_ldap.guidAttribute=This attribute is used by PWM to identity and reference unique users in the LDAP directory.
+LABEL_ldap.guidAttribute=LDAP GUID Attribute
+DEFLT_ldap.guidAttribute=VENDORGUID
+DESCR_ldap.guidAttribute=This attribute is used by PWM to identity and reference unique users in the LDAP directory.  If set \
+  to the default value of <i>VENDORGUID</i>, PWM will attempt to read the vendor specific ldap GUID.  Alternatively, you can set \
+  any string readable attribute as the GUID as long as PWM can trust the directory to enforce the uniqueness.  Lastly, you can use \
+  a custom attribute such as the pwmGUID attribute, and configure the "Auto-Add GUID Value" option to true.
 REGEX_ldap.guidAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
 LABEL_ldap.guid.autoAddValue=Auto-Add GUID Value
-DEFLT_ldap.guid.autoAddValue=true
+DEFLT_ldap.guid.autoAddValue=false
 DESCR_ldap.guid.autoAddValue=If true, PWM will attempt to add a unique GUID value for any user attempting to authenticate \
   that does not have a value.
 
@@ -829,7 +832,7 @@ DEFLT_challenge.minRandomRequired=2
 DESCR_challenge.minRandomRequired=Minimum number of random questions required
 
 LABEL_challenge.minRandomsSetup=Minimum Random Challenges Required During Setup
-DEFLT_challenge.minRandomsSetup=0
+DEFLT_challenge.minRandomsSetup=4
 DESCR_challenge.minRandomsSetup=The minimum number of random questions the user is required to complete during \
   Response Setup.  If this number is higher then the available randoms, or lower then the minimum required, it will \
   be adjusted accordingly.  Set to zero to force all available randoms to be configured at time of setup.
@@ -869,22 +872,22 @@ REGEX_challenge.requiredChallenges=^.+::[0-9]+::[0-9]+$
 LABEL_challenge.randomChallenges=Random Questions
 DEFLT_challenge.randomChallenges=\
   {"":[\
-  "What is the name of the main character in your favorite book?::5::200",\
-  "What is the name of your favorite teacher?::5::200",\
-  "What is the name of your favorite pet?::5::200",\
-  "What was the name of your childhood best friend?::5::200",\
-  "What was your favorite show as a child?::5::200",\
-  "Who is your favorite author?::5::200",\
-  "What is your favorite food?::5::200",\
-  "What is your partner's nickname?::5::200",\
-  "What is your favorite team?::5::200",\
-  "What street did you grow up on?::5::200",\
-  "What city / town were you born in?::5::200",\
-  "What is your favorite vehicle?::5::200",\
-  "If you could meet someone from history, who would it be?::5::200",\
-  "What is your least favorite film of all time?::5::200",\
-  "Who was your least favorite teacher?::5::200",\
-  "What food do you dislike the most?::5::200",\
+  "What is the name of the main character in your favorite book?::4::200",\
+  "What is the name of your favorite teacher?::4::200",\
+  "What is the name of your favorite pet?::4::200",\
+  "What was the name of your childhood best friend?::4::200",\
+  "What was your favorite show as a child?::4::200",\
+  "Who is your favorite author?::4::200",\
+  "What is your favorite food?::4::200",\
+  "What is your partner's nickname?::4::200",\
+  "What is your favorite team?::4::200",\
+  "What street did you grow up on?::4::200",\
+  "What city / town were you born in?::4::200",\
+  "What is your favorite vehicle?::4::200",\
+  "If you could meet someone from history, who would it be?::4::200",\
+  "What is your least favorite film of all time?::4::200",\
+  "Who was your least favorite teacher?::4::200",\
+  "What food do you dislike the most?::4::200",\
   ]}
 DESCR_challenge.randomChallenges=Random Questions for Challenge/Response.   Some of these questions will be presented to the user during \
  forgotten password - the number set in the "Minimum Password Required" setting.  The user may be required to supply answers to all or some of \
@@ -927,8 +930,8 @@ REGEX_challenge.userAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 LABEL_responses.storage.pwmDB=Store Responses in pwmDB
 DEFLT_responses.storage.pwmDB=false
 DESCR_responses.storage.pwmDB=Store (read and write) user responses in pwmDB.  This method allows for user challenge \
-  responses to be saved without saving them to the ldap directory.  Responses are saved using the pwmGUID of the user \
-  as the key.
+  responses to be saved without saving them to the ldap directory.  Responses are saved using the GUID of the user \
+  as the key.  See the ldap configuration to control how the GUID is read from the directory.
 
 LABEL_challenge.allowUnlock=Allow Unlock
 DEFLT_challenge.allowUnlock=true
