--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -571,7 +571,7 @@ DESCR_password.policy.disallowedAttributes=A list of attributes not allowed to b
 REGEX_password.policy.disallowedAttributes=^[a-zA-Z][a-zA-Z0-9]+$
 
 LABEL_password.sharedHistory.enable=Enable Shared History
-DEFLT_password.sharedHistory.enable=true
+DEFLT_password.sharedHistory.enable=false
 DESCR_password.sharedHistory.enable=Enable a global shared password history for all PWM users.  If enabled, all pwm users \
   will share a common password history.  This helps prevent common organizational words from being used as passwords by users. \
   Passwords are stored as a salted encrypted hash in the pwmDB.
