--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,9 +1,9 @@
 #Build Number for ANT. Do not edit!
-#Fri Apr 01 21:53:31 EDT 2011
-build.time=2011.04.01 21\:53\:31 EDT
-build.number=1025
+#Sat Apr 02 14:11:29 EDT 2011
+build.time=2011.04.02 14\:11\:29 EDT
+build.number=1026
 build.user=J
-pwm.version=1.5.3 RC1
+pwm.version=1.5.3
 build.java.vendor=Sun Microsystems Inc.
 pwm.website=http\://code.google.com/p/pwm
 build.java.version=1.5.0_21
