--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,9 +1,9 @@
 #Build Number for ANT. Do not edit!
 #Sat Apr 02 14:11:29 EDT 2011
 build.time=2011.04.02 14\:11\:29 EDT
-build.number=1026
+build.number=1027
 build.user=J
-pwm.version=1.5.3
+pwm.version=1.5.4 devbuild
 build.java.vendor=Sun Microsystems Inc.
 pwm.website=http\://code.google.com/p/pwm
 build.java.version=1.5.0_21
