--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -25,6 +25,7 @@ Password_DoesNotMatch=Passwords do not match
 Password_Missing=Password missing
 Password_PreviouslyUsed=New password has been used previously
 Password_BadPassword=New password does not meet rule requirements
+# Password_BadOldPassword=
 Password_TooLong=New password is too long
 Password_TooShort=New password is too short
 Password_NotEnoughNum=New password does not have enough numbers
