guest registration addition - issue 39

--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -290,6 +290,13 @@ DESCR_ldap.addObjectClasses=Object classes to automatically add to users who aut
  class is in the supplied pwmSchema.ldif file.
 REGEX_ldap.addObjectClasses=^[a-zA-Z][a-zA-Z0-9]+$
 
+LABEL_ldap.defaultObjectClasses=Default Object Classes on Create
+DEFLT_ldap.defaultObjectClasses=["inetOrgPerson"]
+DESCR_ldap.defaultObjectClasses=Object class(es) to use for newly created users. \
+ Typically this is the standard inetOrgPerson class, but this could also be an extended class that \
+ inherits inetOrgPerson or some of it's attributes and/or other classes.
+REGEX_ldap.defaultObjectClasses=^[a-zA-Z][a-zA-Z0-9]+$
+
 LABEL_password.allowChange.queryMatch=Change Password Query Match
 DEFLT_password.allowChange.queryMatch=(objectClass=*)
 DESCR_password.allowChange.queryMatch=Query string used to detect if a user is a permitted to change password.  The user must be \
@@ -390,6 +397,38 @@ DESCR_email.newUser.plainBody=Body of email sent to newly created users.
 LABEL_email.newUser.htmlBody=New User HTML Email Body
 DEFLT_email.newUser.htmlBody={"":"<b>Thank you for registering your account.<\/b>"}
 DESCR_email.newUser.htmlBody=Body of email sent to newly created users.
+
+LABEL_email.guest.subject=New Guest Email Subject
+DEFLT_email.guest.subject={"":"Welcome"}
+DESCR_email.guest.subject=Subject of email sent to newly created guest users.
+
+LABEL_email.guest.from=New Guest Email From
+DEFLT_email.guest.from={"":"Password Notification Agent <noreply@example.com>"}
+DESCR_email.guest.from=From address of email sent to newly created guest users.
+
+LABEL_email.guest.plainBody=New Guest Plaintext Email Body
+DEFLT_email.guest.plainBody={"":"Your account has been created.\nYour username is: %cn%\nYour password is: %password%"}
+DESCR_email.guest.plainBody=Body of email sent to newly created guest users.
+
+LABEL_email.guest.htmlBody=New Guest User HTML Email Body
+DEFLT_email.guest.htmlBody={"":"<b>Your account has been created.<\/b><p>Your username is: <b>%cn%<\/b><br>Your password is: <b>%password%<\/b><\/p>"}
+DESCR_email.guest.htmlBody=Body of email sent to newly created guest users.
+
+LABEL_email.updateguest.subject=Update Guest Email Subject
+DEFLT_email.updateguest.subject={"":"Account update notification"}
+DESCR_email.updateguest.subject=Subject of email sent to updated guest users.
+
+LABEL_email.updateguest.from=Update Guest Email From
+DEFLT_email.updateguest.from={"":"Password Notification Agent <noreply@example.com>"}
+DESCR_email.updateguest.from=From address of email sent to updated guest users.
+
+LABEL_email.updateguest.plainBody=Updated Guest Plaintext Email Body
+DEFLT_email.updateguest.plainBody={"":"Your account has been updated."}
+DESCR_email.updateguest.plainBody=Body of email sent to newly updated guest users.
+
+LABEL_email.updateguest.htmlBody=New Guest User HTML Email Body
+DEFLT_email.updateguest.htmlBody={"":"<b>Your account has been created.<\/b>"}
+DESCR_email.updateguest.htmlBody=Body of email sent to newly created guest users.
 
 LABEL_email.activation.subject=Activation Email Subject
 DEFLT_email.activation.subject={"":"Account Activated"}
@@ -1095,6 +1134,83 @@ DESCR_newUser.form=New User form creation attributes/fields.\
  </table>
 REGEX_newUser.form=^[a-zA-Z0-9]+:.+:(text|number|email|password):[0-9]+:[0-9]+:(true|false):(true|false)$
 
+
+#*******************************************************************************************#
+#                                  Guest Registration                                       #
+#*******************************************************************************************#
+
+CATEGORY_LABEL_GUEST=Guest Registration
+CATEGORY_DESCR_GUEST=Note: The guest user registration module requires that the logged in user has sufficient permissions \
+ to create users and, if so configured, to check for duplicate values.\
+
+LABEL_guest.enable=Enable Guest Registration
+DEFLT_guest.enable=false
+DESCR_guest.enable=Enable guest registration
+
+LABEL_guest.hidden=Hide Guest Registration from Main Menu
+DEFLT_guest.hidden=false
+DESCR_guest.hidden=Hide guest registration from main menu
+
+LABEL_guest.createContext=Creation Context
+DEFLT_guest.createContext=ou=guests,o=example
+DESCR_guest.createContext=LDAP context for new guest accounts to be created in.
+
+LABEL_guest.adminGroup=Guest Admin Group Query String
+DEFLT_guest.adminGroup=(groupMembership=cn=useradmins,ou=groups,o=example)
+DESCR_guest.adminGroup=Query string used to detect if a user is a guest administrator. An LDAP query is performed during pwm login against the logged in user to determine if the user is a guest administrator. If the user matches the query, then the user is considered a guest administrator. 
+
+LABEL_guest.creationUniqueAttributes=Unique Attributes
+DEFLT_guest.creationUniqueAttributes=["cn","mail"]
+DESCR_guest.creationUniqueAttributes=Attributes that must be unique in the directory for the guest user to be created.  For example,\
+ if the 'mail' attribute is listed here (and is in the guest.attributes setting), then PWM \
+ will not allow the new guest user to be created if the value for the mail attribute already \
+ exists on any other user object.  This would result in all userIDs having unique email addresses.
+REGEX_guest.creationUniqueAttributes=^[a-zA-Z][a-zA-Z0-9]+$
+
+LABEL_guest.writeAttributes=Write Attributes
+DEFLT_guest.writeAttributes=["description=PWM Created Guest User"]
+DESCR_guest.writeAttributes=Attributes to be written to ldap when a guest user is created.  These attributes will be written \
+ to the user object just after creating the object.\
+ <br/><br/>\
+ format is name=value pair, multiple attributes can be specified by separating with a comma.
+REGEX_guest.writeAttributes=^[a-zA-Z][a-zA-Z0-9]+=.+$
+
+LABEL_guest.adminAttribute=Administrator DN Attribute
+DEFLT_guest.adminAttribute=manager
+DESCR_guest.adminAttribute=Attribute in which the DN of the logged in user will be written to in ldap \
+ when a guest user is created. \
+ This attribute will be written to the user object just after creating the object.
+
+LABEL_guest.editOriginalAdminOnly=Edit Guest By Original Administrator Only
+DEFLT_guest.editOriginalAdminOnly=false
+DESCR_guest.editOriginalAdminOnly=When set to true, only the guest administrator who created the guest account \
+  will be allowed to update the guest account details.
+
+LABEL_guest.form=New Guest Form
+DEFLT_guest.form={"":["cn:Username:text:2:10:true:false","givenName:First name:text:4:40:true:false","sn:Last name:text:4:40:true:false","mail:Email Address:email:3:50:true:true","telephoneNumber:Telephone Number:text:7:10:true:false"]}
+DESCR_guest.form=New Guest form creation attributes/fields.\
+  <br/><br/>\
+ The values for cn and sn attributes typically required by directories, so they should be included here.\
+  <br/><br/>\
+ Format: <b>attributeName:label:type:minimumLength:maximumLength:required:confirm</b>\
+ <table style="width: 400px">\
+ <tr><td>attributeName</td><td>Name of ldap attribute</td></tr>\
+ <tr><td>label</td><td>Label to show to user</td></tr>\
+ <tr><td>type</td><td>One of the following: <br/>text - text value<br/>number - numeric value<br/>email - regular string with email format validation<br/>password - password or senative value</td></tr>\
+ <tr><td>minimumLength</td><td>Minimum Field Length</td></tr>\
+ <tr><td>maximumLength</td><td>Maximum Field Length</td></tr>\
+ <tr><td>required</td><td>Field is required</td></tr>\
+ <tr><td>confirm</td><td>Field must be confirmed (with a duplicate field)</td></tr>\
+ </table>
+REGEX_guest.form=^[a-zA-Z0-9]+:.+:(text|number|email|password|random):[0-9]+:[0-9]+:(true|false):(true|false)$
+
+LABEL_guest.maxValidDays=Maximum Duration of Account Validity
+DEFLT_guest.maxValidDays=30
+DESCR_guest.maxValidDays=The maximum number of days before the account will be disabled.
+
+LABEL_guest.expirationAttribute=Attribute Used To Store Account Expiration Date
+DEFLT_guest.expirationAttribute=loginExpirationTime
+DESCR_guest.expirationAttribute=The attribute used to store the account expiration date 
 
 #*******************************************************************************************#
 #                                User Activation                                            #
