--- a/pwm/servlet/src/password/pwm/util/stats/Statistic.properties
+++ b/pwm/servlet/src/password/pwm/util/stats/Statistic.properties
@@ -38,6 +38,8 @@ PasswordRuleChecks=Password Rule Checks
 HttpRequests=HTTP Requests
 ActivatedUsers=Activated Users
 NewUsers=New Users
+Guests=New Guest Users
+UpdatedGuests=Updated Guest Users
 LockedUsers=Locked Users
 LockedAddresses=Locked Addresses
 CaptchaSuccessess=Captcha Successes
