--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -82,6 +82,8 @@ Title_UserInformation=Account Information
 Title_RandomPasswords=Random Passwords
 Title_PasswordGuide=Password Guide
 Title_ForgottenUsername=Forgotten Username
+Title_GuestRegistration=Register Guest User
+Title_GuestUpdate=Update Guest User
 Title_Admin=Admin
 
 Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
@@ -94,6 +96,8 @@ Long_Title_UpdateAttributes=Update your user profile data.
 Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
 Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UserInformation=Information about your password and password policies.
+Long_Title_GuestRegistration=Register a new guest user account.
+Long_Title_GuestUpdate=Update a new guest user account.
 Long_Title_Admin=PWM administrative functions
 Long_Title_Logout=Logout of the PWM password self service application.
 Long_Title_ForgottenUsername=Find your forgotten username.
@@ -122,6 +126,8 @@ Display_ActivateUser=To confirm your identity, please enter the following inform
 Display_PleaseWaitBody=Your password is being changed. This process may take several minutes, please be patient.
 Display_ErrorBody=An error has occurred. Please close your browser and try again later.  If this error occurs repeatedly, please contact your help desk.
 Display_UserEventHistory=This page shows your password event history. Only actions performed with PWM are shown here. All times listed are in the %1% timezone.
+Display_GuestRegistration=To register a new guest account, please enter the following information.
+Display_GuestUpdate=To update a guest account, please check and modify the following information.
 Display_Logout=<b>You are now logged out.</b><p/>Please close all internet browser windows before you try to login again.  
 Display_PasswordWarn=Your password is about to expire.  Please change your password soon to avoid problems logging in.  Your password will expire on %1%.
 Display_PasswordNoExpire=Your password does not expire.
