--- a/pwm/servlet/src/password/pwm/config/Message.properties
+++ b/pwm/servlet/src/password/pwm/config/Message.properties
@@ -72,6 +72,8 @@ Success_PasswordChange=Your password has been changed successfully.
 Success_SetupResponse=Your secret questions and answers have been successfully saved.  If you ever forget your password, you can use the answers to these questions to reset your password.
 Success_Unknown=The operation has been successfully completed.
 Success_CreateUser=Your new user account has been successfully created.  Be sure to continue the process, or you will not be able to access your new account.
+Success_CreateGuest=The new guest account has been successfully created.  The guest user will receive a notification if the email address has been entered.  The guest account may still need activation.
+Success_UpdateGuest=The guest account has been updated succesfully.  The guest user will receive a notification if the email address has been entered.
 Success_ActivateUser=Your user account has been successfully activated.  Be sure to complete the process, or you will not be able to access your account.
 Success_UpdateAttributes=Your user information has been successfully updated.
 Success_ResponsesMeetRules=Your responses meet the requirements.  Click Save Responses when ready.
